test/samples/invalid/resolving/fresh_out3.maruir
struct Foo {
	x: u32;
	y: u32;
}

fun alloc_foo<M>(x: u32, y: u32): Foo *M
locals res: Foo *M;
{
	entry:
		res := alloc Foo in M;
		store x in res.x;
		store y in res.y;
		return res;
}

fun main()
locals
	f2: Foo *M;
{
	entry:
		f2 := call alloc_foo<out M>(u32(3), u32(4));
		return;
		
}
